# Footverse

./: .env.example  .gitignore  DESIGN_DOC.md  Dockerfile  PHASE6_UNREAL_INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/run-footverse/: SKILL.md
.github/workflows/: tests.yml
footverse/: __init__.py  auth.py  config.py  observability.py  world.py
footverse/agents/: __init__.py  advisor.py  manager.py  manager_tools.py  memory.py  tools.py
footverse/api/: __init__.py  app.py  schemas.py
footverse/domain/: __init__.py  lineup.py  player.py  positions.py
footverse/engine/: __init__.py  distributions.py  fixedmath.py  league.py  market_gen.py  rng.py  scoring.py  valuation.py
footverse/state/: __init__.py  economy.py  models.py  repository.py  season.py  sqlstore.py  store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
specs/: SPEC-001-criar-clube.md  SPEC-002-comprar-jogador.md  SPEC-003-escalacao.md  SPEC-004-pontuacao.md  SPEC-005-jogador-valor-pontuacao.md  SPEC-006-temporada-progressao.md
tests/: test_agents.py  test_ai_manager.py  test_api.py  test_auth.py  test_distributions.py  test_economy.py  test_fixedmath.py  test_lineup.py  test_loop_e2e.py  test_market_gen.py  test_memory.py  test_observability.py  test_p2p_market.py  test_persistence.py  test_player.py  test_positions.py  test_rng.py  test_scoring.py  test_season.py  test_standings.py  test_valuation.py  test_worldclock.py
(+10 files in other folders)
