[project]
name = "footverse"
version = "0.1.0"
description = "Footverse — motor determinístico (Fase 1, MVP Cartola 2.0)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "pydantic>=2.0", "SQLAlchemy>=2.0"]
postgres = ["SQLAlchemy>=2.0", "psycopg[binary]>=3.1"]
agents = ["langgraph>=1.0", "langchain>=1.0", "langchain-openai>=0.2", "langchain-core>=0.3", "openai>=1.40", "chromadb>=1.0"]
dev = ["pytest>=8.0", "fastapi>=0.115", "httpx>=0.27", "uvicorn>=0.30", "SQLAlchemy>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["footverse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
